--- a/tf_10_11_12_addLayers_buildNN_visualization.ipynb
+++ b/tf_10_11_12_addLayers_buildNN_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -15,28 +15,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def add_layer(inputs, in_size, out_size, activation_function = None):\n",
-    "    Weights = tf.Variable(tf.random_normal([in_size, out_size]))\n",
-    "    biases = tf.Variable(tf.zeros([1, out_size]) + 0.1) # 建議 bias 不為 0\n",
-    "    Wx_plus_b = tf.matmul(inputs, Weights) + biases\n",
-    "    if activation_function is None:\n",
-    "        outputs = Wx_plus_b\n",
-    "    else:\n",
-    "        outputs = activation_function(Wx_plus_b)\n",
-    "        \n",
-    "    return outputs\n",
+    "def add_layer(inputs, in_size, out_size, n_layer, activation_function = None):\n",
+    "    layer_name = 'layer%s' % n_layer\n",
+    "    with tf.name_scope(layer_name):\n",
+    "        with tf.name_scope('weights'):\n",
+    "            Weights = tf.Variable(tf.random_normal([in_size, out_size]), name = 'W')\n",
+    "            tf.histogram_summary(layer_name + '/weights', Weights)\n",
+    "        with tf.name_scope('biases'):\n",
+    "            biases = tf.Variable(tf.zeros([1, out_size]) + 0.1) # 建議 bias 不為 0\n",
+    "            tf.histogram_summary(layer_name + '/biases', biases)\n",
+    "        with tf.name_scope('Wx_plus_b'):\n",
+    "            Wx_plus_b = tf.matmul(inputs, Weights) + biases\n",
+    "        if activation_function is None:\n",
+    "            outputs = Wx_plus_b\n",
+    "        else:\n",
+    "            outputs = activation_function(Wx_plus_b)\n",
+    "            tf.histogram_summary(layer_name + '/outputs', outputs)\n",
+    "        return outputs\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -50,37 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "xs = tf.placeholder(tf.float32, [None, 1])\n",
-    "ys = tf.placeholder(tf.float32, [None, 1])\n",
+    "with tf.name_scope('inputs'):\n",
+    "    xs = tf.placeholder(tf.float32, [None, 1], name = 'x_input')\n",
+    "    ys = tf.placeholder(tf.float32, [None, 1], name = 'y_input')\n",
     "\n",
     "# build nn\n",
-    "l1 = add_layer(xs, 1, 10, activation_function=tf.nn.relu)\n",
-    "prediction = add_layer(l1, 10, 1, activation_function=None)\n",
+    "l1 = add_layer(xs, 1, 10, n_layer = 1, activation_function=tf.nn.relu)\n",
+    "prediction = add_layer(l1, 10, 1, n_layer = 2, activation_function=None)\n",
     "\n",
-    "loss = tf.reduce_mean(tf.reduce_sum(tf.square(ys - prediction), reduction_indices=[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "with tf.name_scope('loss'):\n",
+    "    loss = tf.reduce_mean(tf.reduce_sum(tf.square(ys - prediction), reduction_indices=[1]))\n",
+    "    tf.scalar_summary('loss', loss)\n",
+    "\n",
     "# training\n",
-    "train_step = tf.train.GradientDescentOptimizer(0.1).minimize(loss)"
+    "with tf.name_scope('train'):\n",
+    "    train_step = tf.train.GradientDescentOptimizer(0.1).minimize(loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +93,28 @@
     "\n",
     "# session\n",
     "sess = tf.Session()\n",
+    "merged = tf.merge_all_summaries()\n",
+    "# 加載到文件\n",
+    "writer = tf.train.SummaryWriter('logs/', sess.graph)\n",
     "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "###\n",
+    "for i in range(1000):\n",
+    "    sess.run(train_step, feed_dict={xs: x_data, ys: y_data})\n",
+    "    if i % 50 == 0:\n",
+    "        result = sess.run(merged, feed_dict={xs: x_data, ys: y_data})\n",
+    "        writer.add_summary(result, i)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -113,6 +136,8 @@
     }
    ],
    "source": [
+    "### for plot\n",
+    "'''\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "ax.scatter(x_data, y_data)\n",
@@ -130,7 +155,8 @@
     "            pass\n",
     "        prediction_value = sess.run(prediction, feed_dict={xs: x_data})\n",
     "        lines = ax.plot(x_data, prediction_value, 'r-', lw=5)\n",
-    "        plt.pause(0.1)"
+    "        plt.pause(0.1)\n",
+    "'''"
    ]
   },
   {
@@ -144,6 +170,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
